Changes for 1.1beta9:

 - added latest values filtring/marking of log history (Eugene)
 - developed multiple log history viewing (Eugene)

Changes for 1.1beta8:

 - moved installation of images to data.sql (Alexei)
 - fixed highly unefficient check of permissions (Alexei)
 - developed remote commads execution on specific actions (Eugene)
 - added "URL" module for screens (Eugene)
 - added trigger selecton from popup (Eugene)
 - improved popup selection (Eugene)
 - improved "IT services" configuration (Eugene)
 - added "Data overview" for screens (Eugene)
 - added "Triggers overview" for screens (Eugene)
 - added blinking into Trigger overview (Eugene)
 - added screen displaying in other screen (Eugene)
 - improved Overview table header, vertical text added (Eugene)
 - developed "ZABBIX Clock" module for screens (Eugene)
 - developed "ZABBIX server info" module for screens (Eugene)
 - developed "Triggers info" module for screens (Eugene)
 - developed "Host info" module for screens (Eugene)
 - improved screens displaying, added item alignment (Eugene)
 - improved ZABBIX server report (Eugene)
 - improved images configuration (Eugene)
 - added onserver image resizing for thumbs by php (Eugene)
 - developed acknowledges system (Eugene)
 - added icons displaying for maps (Eugene)
 - added maps displaying for maps (Eugene)
 - improved maps to show status of linked map (Eugene)

Changes for 1.1beta7:

 - added selected item history cleaning (Eugene)
 - improved housekeeper (Alexei)
 - added group operations for actions (Eugene)
 - frontend support for action status (Eugene)
 - support for action statuses: enable and disabled (Alexei)
 - added column actions.status (Alexei)
 - added Hostname for graphs displaying (Eugene)
 - added hosekeeper support for frontend (Eugene)
 - added table housekeeper (Alexei)
 - added value mapping for e-mail content (Eugene)
 - support of max(#N) for sum,min,max,delta and avg (Alexei)
 - developed value mapping (Eugene)