@@ -1,5 +1,6 @@
 Changes for 1.1beta9:
 
+ - fixed processing of trapped items when a key contains '\' (Alexei)
  - added latest values filtring/marking of log history (Eugene)
  - developed multiple log history viewing (Eugene)
 
